...
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chart_frame">

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
...
        </LinearLayout>

        <Button
            android:text="Overlay"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_overlay" />

        <LinearLayout
            android:id="@+id/overlays"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
...
