<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:actionViewClass="org.cerion.stockcharts.common.SymbolSearchView"
        app:showAsAction="collapseActionView|always" />

    <group android:id="@+id/charts" android:orderInCategory="100" >
        <item android:id="@+id/add_indicator" android:title="Indicator"
            android:orderInCategory="100" app:showAsAction="never" />

        <item android:id="@+id/add_price" android:title="Price"
            android:orderInCategory="100" app:showAsAction="never"/>

        <item android:id="@+id/add_volume" android:title="Volume"
            android:orderInCategory="100" app:showAsAction="never"/>
    </group>

    <group android:id="@+id/misc" android:orderInCategory="101">
        <item android:id="@+id/clear_cache" android:title="Clear Cache" app:showAsAction="never"/>
        <item android:id="@+id/stats" android:title="Stats"/>
    </group>

</menu>