...

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:onClick="@{() -> viewModel.save()}"
            android:id="@+id/save"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:onClick="@{() -> viewModel.cancel()}"
...
